--- a/app/src/main/res/layout/activity_polls.xml
+++ b/app/src/main/res/layout/activity_polls.xml
@@ -18,7 +18,10 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:id="@+id/rvPolls"
-        android:layout_below="@+id/toolbar"/>
+        android:layout_below="@+id/toolbar"
+        android:clipToPadding="false"
+        android:scrollbarStyle="outsideOverlay"
+        android:scrollbars="vertical" />
 
     <include layout="@layout/view_progress_indicator" />
 
