--- a/app/src/main/res/layout/item_poll_photos.xml
+++ b/app/src/main/res/layout/item_poll_photos.xml
@@ -11,6 +11,7 @@
         android:layout_gravity="left"
         android:layout_alignParentTop="true"
         android:layout_toLeftOf="@+id/imgGroupCollage2"
-        android:layout_toStartOf="@+id/imgGroupCollage2" />
+        android:layout_toStartOf="@+id/imgGroupCollage2"
+        android:background="@drawable/round_shape"/>
     
 </LinearLayout>
