--- a/app/src/main/res/layout/item_group.xml
+++ b/app/src/main/res/layout/item_group.xml
@@ -1,68 +1,91 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
+<android.support.v7.widget.CardView
+    xmlns:card_view="http://schemas.android.com/apk/res-auto"
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_margin="@dimen/group_cardview_margin"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content">
-    <TextView
-        android:id="@+id/tvGroupName"
-        android:textAppearance="?android:attr/textAppearanceLarge"
-        android:layout_width="wrap_content"
-        android:layout_gravity="left"
-        android:layout_height="wrap_content" />
 
     <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-        android:orientation="horizontal"
-        android:layout_width="50dp"
-        android:layout_height="50dp"
-        android:layout_gravity="right"
-        android:layout_toRightOf="@+id/tvGroupName"
-        android:layout_alignParentRight="true"
-        >
+        android:orientation="vertical"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="10dp">
 
-        <ImageView
-            android:layout_width="25dp"
-            android:layout_height="25dp"
-            android:id="@+id/imgGroupCollage1"
-            android:src="@mipmap/ic_launcher"
-            android:layout_gravity="left"
+        <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+            android:orientation="horizontal"
+            android:layout_width="60dp"
+            android:layout_height="60dp"
+            android:id="@+id/rlGroupImage"
+            android:layout_centerInParent="true"
+            android:gravity="center_horizontal"
             android:layout_alignParentTop="true"
-            android:layout_toLeftOf="@+id/imgGroupCollage2"
-            android:layout_toStartOf="@+id/imgGroupCollage2" />
+            >
 
-        <ImageView
-            android:layout_width="25dp"
-            android:layout_height="25dp"
-            android:id="@+id/imgGroupCollage4"
-            android:src="@mipmap/ic_launcher"
+            <ImageView
+                android:layout_width="@dimen/group_member_image_width"
+                android:layout_height="@dimen/group_member_image_height"
+                android:id="@+id/imgGroupCollage1"
+                android:src="@mipmap/ic_launcher"
+                android:layout_alignParentTop="true"/>
+
+            <ImageView
+                android:layout_width="@dimen/group_member_image_width"
+                android:layout_height="@dimen/group_member_image_height"
+                android:id="@+id/imgGroupCollage2"
+                android:src="@mipmap/ic_launcher"
+                android:layout_gravity="right"
+                android:layout_toRightOf="@id/imgGroupCollage1"/>
+
+            <ImageView
+                android:layout_width="@dimen/group_member_image_width"
+                android:layout_height="@dimen/group_member_image_height"
+                android:id="@+id/imgGroupCollage3"
+                android:src="@mipmap/ic_launcher"
+                android:layout_alignRight="@id/imgGroupCollage2"
+                android:layout_below="@id/imgGroupCollage2"/>
+
+            <ImageView
+                android:layout_width="@dimen/group_member_image_width"
+                android:layout_height="@dimen/group_member_image_height"
+                android:id="@+id/imgGroupCollage4"
+                android:src="@mipmap/ic_launcher"
+                android:layout_alignBottom="@id/imgGroupCollage3"
+                android:layout_below="@+id/imgGroupCollage1"
+                android:layout_alignLeft="@+id/imgGroupCollage1"
+                android:layout_toLeftOf="@+id/imgGroupCollage3"/>
+
+
+        </RelativeLayout>
+
+        <TextView
+            android:id="@+id/tvGroupName"
+            android:layout_below="@id/rlGroupImage"
+            android:layout_centerHorizontal="true"
+            android:textAppearance="?android:attr/textAppearanceMedium"
+            android:layout_width="wrap_content"
             android:layout_gravity="left"
-            android:layout_alignParentBottom="true"
-            android:layout_toLeftOf="@+id/imgGroupCollage3"
-            android:layout_toStartOf="@+id/imgGroupCollage3" />
+            android:layout_height="wrap_content" />
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/group_divider_height"
+            android:id="@+id/vDivider"
+            android:layout_below="@id/tvGroupName"
+            android:background="@color/colorEditItemDivider"
+            android:layout_marginTop="@dimen/group_divider_top_margin"
+            android:layout_marginBottom="@dimen/group_divider_top_margin"/>
 
-        <ImageView
-            android:layout_width="25dp"
-            android:layout_height="25dp"
-            android:id="@+id/imgGroupCollage2"
-            android:src="@mipmap/ic_launcher"
-            android:layout_gravity="right"
-            android:layout_alignParentRight="true"/>
-
-        <ImageView
-            android:layout_width="25dp"
-            android:layout_height="25dp"
-            android:id="@+id/imgGroupCollage3"
-            android:src="@mipmap/ic_launcher"
-            android:layout_gravity="right"
-            android:layout_alignParentRight="true"
-            android:layout_below="@id/imgGroupCollage2"/>
+        <TextView
+            android:id="@+id/tvGroupMembers"
+            android:textColor="@android:color/darker_gray"
+            android:textAppearance="?android:attr/textAppearanceSmall"
+            android:layout_gravity="left"
+            android:layout_centerHorizontal="true"
+            android:maxLines="2"
+            android:ellipsize="end"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/vDivider"/>
 
     </RelativeLayout>
-
-    <TextView
-        android:id="@+id/tvGroupMembers"
-        android:textColor="@android:color/darker_gray"
-        android:layout_gravity="left"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/tvGroupName"/>
-
-</RelativeLayout>
+</android.support.v7.widget.CardView>
