--- a/app/src/main/res/layout/item_group.xml
+++ b/app/src/main/res/layout/item_group.xml
@@ -88,7 +88,7 @@
             android:id="@+id/tvGroupMembers"
             android:textColor="@android:color/darker_gray"
             android:textAppearance="?android:attr/textAppearanceSmall"
-            android:layout_gravity="center"
+            android:gravity="center_horizontal"
             android:layout_centerHorizontal="true"
             android:maxLines="2"
             android:ellipsize="end"
