added new fonts

--- a/app/src/main/res/layout/activity_create_new_group.xml
+++ b/app/src/main/res/layout/activity_create_new_group.xml
@@ -16,9 +16,9 @@
         <android.support.v7.widget.Toolbar
             android:id="@+id/toolbar"
             android:title="@string/edit_group"
+            app:theme="@style/DefaultToolbar"
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
-            android:background="?attr/colorPrimary"
             app:navigationIcon="?attr/homeAsUpIndicator"
             app:popupTheme="@style/AppTheme.PopupOverlay"/>
 
