--- a/app/src/main/res/layout/activity_polls.xml
+++ b/app/src/main/res/layout/activity_polls.xml
@@ -10,7 +10,7 @@
         android:id="@+id/toolbar"
         android:layout_width="match_parent"
         android:layout_height="?attr/actionBarSize"
-        android:background="?attr/colorPrimary"
+        app:theme="@style/DefaultToolbar"
         android:title="@string/poll_title"
         />
 
