--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -13,22 +13,22 @@
     <style name="AppTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
 
     <style name="AppTheme.Widget.TextView.Normal" parent="android:Widget.Holo.Light.TextView">
-        <item name="fontPath">fonts/HelveticaNeue.ttf</item>
+        <item name="fontPath">fonts/Lato-Light.ttf</item>
         <item name="android:textSize">14sp</item>
     </style>
 
     <style name="AppTheme.Widget.TextView.Bold" parent="android:Widget.Holo.Light.TextView">
-        <item name="fontPath">fonts/HelveticaNeue-Medium.ttf</item>
+        <item name="fontPath">fonts/Lato-Bold.ttf</item>
         <item name="android:textSize">14sp</item>
     </style>
 
     <style name="AppTheme.Widget.TextView.Bold.Medium" parent="android:Widget.Holo.Light.TextView">
-        <item name="fontPath">fonts/HelveticaNeue-Medium.ttf</item>
+        <item name="fontPath">fonts/Lato-Bold.ttf</item>
         <item name="android:textSize">18sp</item>
     </style>
 
     <style name="AppTheme.Widget.TextView.Bold.ExtraLarge" parent="android:Widget.Holo.Light.TextView">
-        <item name="fontPath">fonts/HelveticaNeue-Medium.ttf</item>
+        <item name="fontPath">fonts/Lato-Medium.ttf</item>
         <item name="android:textSize">28sp</item>
     </style>
 
@@ -41,6 +41,11 @@
         <item name="android:layout_marginBottom">@dimen/activity_vertical_margin</item>
         <item name="android:layout_marginLeft">@dimen/activity_horizontal_margin</item>
         <item name="android:layout_marginRight">@dimen/activity_horizontal_margin</item>
+    </style>
+
+    <style name="DefaultToolbar" parent="ThemeOverlay.AppCompat.Dark.ActionBar">
+        <item name="android:textColor">@android:color/white</item>
+        <item name="android:background">?attr/colorPrimary</item>
     </style>
 
 </resources>
