--- a/app/src/main/res/layout/activity_polls.xml
+++ b/app/src/main/res/layout/activity_polls.xml
@@ -18,8 +18,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:id="@+id/rvPolls"
-        android:layout_below="@+id/toolbar"
-        />
+        android:layout_below="@+id/toolbar"/>
 
     <include layout="@layout/view_progress_indicator" />
 
