--- a/app/src/main/res/layout/item_group.xml
+++ b/app/src/main/res/layout/item_group.xml
@@ -27,6 +27,8 @@
             android:orientation="horizontal"
             android:layout_width="60dp"
             android:layout_height="60dp"
+            android:layout_marginTop="@dimen/group_image_view_vertical_margin"
+            android:layout_marginBottom="@dimen/group_image_view_vertical_margin"
             android:id="@+id/rlGroupImage"
             android:layout_centerInParent="true"
             android:gravity="center_horizontal"
@@ -91,6 +93,7 @@
             android:gravity="center_horizontal"
             android:layout_centerHorizontal="true"
             android:maxLines="2"
+            android:lines="2"
             android:ellipsize="end"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
