--- a/app/src/main/res/layout/activity_poll_form.xml
+++ b/app/src/main/res/layout/activity_poll_form.xml
@@ -25,6 +25,7 @@
             android:id="@+id/rlHeader">
 
             <com.wrapp.floatlabelededittext.FloatLabeledEditText
+                android:id="@+id/fletEventName"
                 android:layout_gravity="right"
                 android:layout_alignParentRight="true"
                 android:layout_alignParentEnd="true"
