--- a/app/src/main/res/layout/activity_polls.xml
+++ b/app/src/main/res/layout/activity_polls.xml
@@ -14,7 +14,33 @@
         android:title="@string/poll_title"
         />
 
+    <RelativeLayout
+        android:id="@+id/rlPollsPlaceholder"
+        android:layout_centerInParent="true"
+        android:visibility="gone"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+       <ImageView
+           android:id="@+id/ivPollsPlaceholder"
+           android:src="@drawable/ic_checked_clipboard"
+           android:layout_centerHorizontal="true"
+           android:layout_width="wrap_content"
+           android:layout_height="wrap_content" />
+        <TextView
+            android:text="@string/polls_placeholder"
+            android:textAppearance="@style/AppTheme.Widget.TextView.Bold.Medium"
+            android:layout_marginLeft="@dimen/activity_horizontal_margin"
+            android:layout_marginRight="@dimen/activity_horizontal_margin"
+            android:layout_below="@+id/ivPollsPlaceholder"
+            android:textColor="@color/gray_transparent"
+            android:textAlignment="center"
+            android:layout_centerHorizontal="true"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
+    </RelativeLayout>
+
     <android.support.v7.widget.RecyclerView
+        android:visibility="gone"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:id="@+id/rvPolls"
