--- a/app/src/main/res/layout/item_poll_option.xml
+++ b/app/src/main/res/layout/item_poll_option.xml
@@ -1,70 +1,96 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_marginLeft="@dimen/activity_horizontal_margin"
-    android:layout_marginRight="@dimen/activity_horizontal_margin"
+<FrameLayout android:layout_height="100dp"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <TextView
-        android:id="@+id/tvPollOptionListDayOfWeek"
-        android:textAppearance="?android:attr/textAppearanceLarge"
-        android:textColor="@android:color/darker_gray"
-        android:textAlignment="center"
-        android:gravity="center"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentLeft="true"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+    <FrameLayout
+        android:id="@+id/option_view_1"
+        android:layout_width="0dp"
+        android:layout_height="match_parent"
+        android:layout_gravity="right"
+        android:background="#f66"
+        android:clickable="true"
+        android:foreground="?attr/selectableItemBackground">
+        <ImageView
+            android:src="@drawable/ic_close"
+            android:background="@android:color/transparent"
+            android:tint="@android:color/white"
+            android:layout_gravity="center"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
+    </FrameLayout>
 
-    <TextView
-        android:id="@+id/tvPollOptionListDate"
-        android:textAppearance="@style/AppTheme.Widget.TextView.Bold.ExtraLarge"
-        android:textColor="@android:color/darker_gray"
-        android:gravity="center"
-        android:textAlignment="center"
-        android:layout_below="@+id/tvPollOptionListDayOfWeek"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        android:id="@+id/swipeableContainer"
+        android:paddingLeft="16dp"
+        android:paddingRight="16dp"
+        android:layout_width="match_parent"
+        android:clickable="true"
+        android:background="@android:color/white"
+        android:layout_height="wrap_content">
 
-    <TextView
-        android:id="@+id/tvPollOptionListMonth"
-        android:textAppearance="?android:attr/textAppearanceLarge"
-        android:textColor="@android:color/darker_gray"
-        android:gravity="center"
-        android:textAlignment="center"
-        android:layout_below="@+id/tvPollOptionListDate"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+        <TextView
+            android:id="@+id/tvPollOptionListDayOfWeek"
+            android:textAppearance="?android:attr/textAppearanceLarge"
+            android:textColor="@android:color/darker_gray"
+            android:textAlignment="center"
+            android:gravity="center"
+            android:layout_alignParentTop="true"
+            android:layout_alignParentLeft="true"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
 
-    <TextView
-        android:id="@+id/tvPollOptionListName"
-        android:textAppearance="?android:attr/textAppearanceLarge"
-        android:layout_toRightOf="@+id/tvPollOptionListDate"
-        android:layout_alignBaseline="@+id/tvPollOptionListDate"
-        android:layout_marginLeft="@dimen/activity_horizontal_margin"
-        android:layout_marginRight="@dimen/activity_horizontal_margin"
-        android:ellipsize="end"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+        <TextView
+            android:id="@+id/tvPollOptionListDate"
+            android:textAppearance="@style/AppTheme.Widget.TextView.Bold.ExtraLarge"
+            android:textColor="@android:color/darker_gray"
+            android:gravity="center"
+            android:textAlignment="center"
+            android:layout_below="@+id/tvPollOptionListDayOfWeek"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
 
-    <TextView
-        android:id="@+id/tvPollOptionVoteCount"
-        android:textAppearance="?android:attr/textAppearanceMedium"
-        android:layout_below="@+id/tvPollOptionListName"
-        android:layout_toRightOf="@+id/tvPollOptionListDate"
-        android:layout_marginLeft="@dimen/activity_horizontal_margin"
-        android:layout_marginRight="@dimen/activity_horizontal_margin"
-        android:visibility="gone"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+        <TextView
+            android:id="@+id/tvPollOptionListMonth"
+            android:textAppearance="?android:attr/textAppearanceLarge"
+            android:textColor="@android:color/darker_gray"
+            android:gravity="center"
+            android:textAlignment="center"
+            android:layout_below="@+id/tvPollOptionListDate"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
 
-    <cn.refactor.library.SmoothCheckBox
-        android:id="@+id/cbPollOptionVote"
-        android:layout_alignParentRight="true"
-        android:layout_centerVertical="true"
-        android:layout_marginRight="@dimen/activity_horizontal_margin"
-        android:visibility="gone"
-        android:layout_width="40dp"
-        android:layout_height="40dp" />
+        <TextView
+            android:id="@+id/tvPollOptionListName"
+            android:textAppearance="?android:attr/textAppearanceLarge"
+            android:layout_toRightOf="@+id/tvPollOptionListDate"
+            android:layout_alignBaseline="@+id/tvPollOptionListDate"
+            android:layout_marginLeft="@dimen/activity_horizontal_margin"
+            android:layout_marginRight="@dimen/activity_horizontal_margin"
+            android:ellipsize="end"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
 
-</RelativeLayout>
+        <TextView
+            android:id="@+id/tvPollOptionVoteCount"
+            android:textAppearance="?android:attr/textAppearanceMedium"
+            android:layout_below="@+id/tvPollOptionListName"
+            android:layout_toRightOf="@+id/tvPollOptionListDate"
+            android:layout_marginLeft="@dimen/activity_horizontal_margin"
+            android:layout_marginRight="@dimen/activity_horizontal_margin"
+            android:visibility="gone"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
+
+        <cn.refactor.library.SmoothCheckBox
+            android:id="@+id/cbPollOptionVote"
+            android:layout_alignParentRight="true"
+            android:layout_centerVertical="true"
+            android:layout_marginRight="@dimen/activity_horizontal_margin"
+            android:visibility="gone"
+            android:layout_width="40dp"
+            android:layout_height="40dp" />
+
+    </RelativeLayout>
+
+</FrameLayout>
