--- a/app/src/main/res/layout/view_progress_indicator.xml
+++ b/app/src/main/res/layout/view_progress_indicator.xml
@@ -14,6 +14,7 @@
         android:layout_centerHorizontal="true"
         android:layout_marginBottom="@dimen/activity_vertical_margin"
         app:indicatorName="BallPulseIndicator"
+        android:visibility="gone"
         app:indicatorColor="@color/colorAccent" />
 
 </RelativeLayout>
