--- a/app/src/main/res/layout/item_poll_option.xml
+++ b/app/src/main/res/layout/item_poll_option.xml
@@ -60,27 +60,30 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" />
 
-        <TextView
-            android:id="@+id/tvPollOptionListName"
-            android:textAppearance="?android:attr/textAppearanceLarge"
+        <RelativeLayout
             android:layout_toRightOf="@+id/tvPollOptionListDate"
             android:layout_alignBaseline="@+id/tvPollOptionListDate"
-            android:layout_marginLeft="@dimen/activity_horizontal_margin"
-            android:layout_marginRight="@dimen/activity_horizontal_margin"
-            android:ellipsize="end"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content">
+            <TextView
+                android:id="@+id/tvPollOptionListName"
+                android:textAppearance="?android:attr/textAppearanceLarge"
+                android:layout_marginLeft="@dimen/activity_horizontal_margin"
+                android:layout_marginRight="@dimen/activity_horizontal_margin"
+                android:ellipsize="end"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
 
-        <TextView
-            android:id="@+id/tvPollOptionVoteCount"
-            android:textAppearance="?android:attr/textAppearanceMedium"
-            android:layout_below="@+id/tvPollOptionListName"
-            android:layout_toRightOf="@+id/tvPollOptionListDate"
-            android:layout_marginLeft="@dimen/activity_horizontal_margin"
-            android:layout_marginRight="@dimen/activity_horizontal_margin"
-            android:visibility="gone"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
+            <TextView
+                android:id="@+id/tvPollOptionVoteCount"
+                android:textAppearance="?android:attr/textAppearanceMedium"
+                android:layout_below="@+id/tvPollOptionListName"
+                android:layout_marginLeft="@dimen/activity_horizontal_margin"
+                android:layout_marginRight="@dimen/activity_horizontal_margin"
+                android:visibility="gone"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
+        </RelativeLayout>
 
         <cn.refactor.library.SmoothCheckBox
             android:id="@+id/cbPollOptionVote"
