--- a/app/src/main/res/layout/content_create_new_group.xml
+++ b/app/src/main/res/layout/content_create_new_group.xml
@@ -2,38 +2,53 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                 xmlns:app="http://schemas.android.com/apk/res-auto"
                 xmlns:tools="http://schemas.android.com/tools"
+                xmlns:float="http://schemas.android.com/apk/res-auto"
                 app:layout_behavior="@string/appbar_scrolling_view_behavior"
                 tools:context="com.kevrain.consensus.activities.CreateOrEditGroupActivity"
                 tools:showIn="@layout/activity_create_new_group"
-                android:layout_margin="5dp"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/save"
-        android:id="@+id/btnSave"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true"/>
 
-    <EditText
-        android:layout_width="wrap_content"
+    <RelativeLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="@string/group_name_hint"
-        android:id="@+id/etGroupName"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true"
-        android:layout_marginBottom="10dp"/>
+        android:background="@drawable/background_gradient"
+        android:id="@+id/rlHeader">
+
+        <com.wrapp.floatlabelededittext.FloatLabeledEditText
+            android:id="@+id/fletEventName"
+            android:layout_gravity="right"
+            android:layout_alignParentRight="true"
+            android:layout_alignParentEnd="true"
+            android:layout_width="match_parent"
+            android:layout_alignParentBottom="true"
+            android:layout_marginTop="@dimen/activity_vertical_margin"
+            android:layout_marginBottom="@dimen/activity_vertical_margin"
+            android:layout_marginLeft="@dimen/activity_horizontal_margin"
+            android:layout_marginRight="@dimen/activity_horizontal_margin"
+            float:fletTextAppearance="@style/AppTheme.Widget.TextView.FloatedTextHint"
+            android:textAppearance="@style/AppTheme.DefaultMargins"
+            android:layout_height="wrap_content">
+            <EditText
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textColor="@android:color/white"
+                android:textAppearance="@style/AppTheme.Widget.TextView.Bold.ExtraLarge"
+                android:background="@android:color/transparent"
+                android:textColorHint="@color/white_transparent"
+                android:hint="@string/group_name"
+                android:id="@+id/etGroupName" />
+        </com.wrapp.floatlabelededittext.FloatLabeledEditText>
+
+    </RelativeLayout>
 
     <ListView
+        android:layout_marginLeft="5dp"
+        android:layout_marginRight="5dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/lvAddFriends"
-        android:layout_below="@+id/divider"
+        android:layout_below="@+id/tvAddFriends"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"/>
 
@@ -43,17 +58,19 @@
         android:layout_height="wrap_content"
         android:text="@string/add_friends"
         android:textColor="@color/colorBlack"
+        android:textAppearance="?android:attr/textAppearanceMedium"
+        android:textStyle="bold"
         android:id="@+id/tvAddFriends"
-        android:layout_below="@+id/etGroupName"
+        android:layout_below="@+id/rlHeader"
         android:layout_alignParentLeft="true"
-        android:layout_marginLeft="5dp"
+        android:layout_margin="5dp"
         android:layout_alignParentStart="true"/>
 
-    <View
-        android:id="@+id/divider"
-        android:layout_below="@id/tvAddFriends"
-        android:layout_width="match_parent"
-        android:layout_height="2dp"
-        android:layout_margin="5dp"
-        android:background="@color/colorEditItemDivider"/>
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/save"
+        android:id="@+id/btnSave"
+        android:layout_below="@id/lvAddFriends"
+        android:layout_alignParentRight="true"/>
 </RelativeLayout>
