--- a/app/src/main/res/layout/item_group.xml
+++ b/app/src/main/res/layout/item_group.xml
@@ -74,6 +74,7 @@
         <TextView
             android:id="@+id/tvGroupName"
             android:layout_below="@id/rlGroupImage"
+            android:gravity="center_horizontal"
             android:layout_centerHorizontal="true"
             android:textAppearance="?android:attr/textAppearanceMedium"
             android:layout_width="wrap_content"
