--- a/app/src/main/res/layout/activity_groups.xml
+++ b/app/src/main/res/layout/activity_groups.xml
@@ -6,6 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
+    android:background="#f2f2f2"
     tools:context="com.kevrain.consensus.activities.GroupsActivity">
 
     <android.support.design.widget.AppBarLayout
