--- a/app/src/main/res/layout/content_create_new_group.xml
+++ b/app/src/main/res/layout/content_create_new_group.xml
@@ -46,7 +46,7 @@
         android:layout_marginLeft="5dp"
         android:layout_marginRight="5dp"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:id="@+id/lvAddFriends"
         android:layout_below="@+id/tvAddFriends"
         android:layout_alignParentLeft="true"
@@ -71,6 +71,6 @@
         android:layout_height="wrap_content"
         android:text="@string/save"
         android:id="@+id/btnSave"
-        android:layout_below="@id/lvAddFriends"
+        android:layout_alignParentBottom="true"
         android:layout_alignParentRight="true"/>
 </RelativeLayout>
