--- a/app/src/main/res/layout/item_poll_option.xml
+++ b/app/src/main/res/layout/item_poll_option.xml
@@ -1,7 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout android:layout_height="100dp"
+<FrameLayout
+    android:layout_height="wrap_content"
     android:layout_width="match_parent"
-    xmlns:android="http://schemas.android.com/apk/res/android">
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <FrameLayout
         android:id="@+id/option_view_1"
@@ -22,52 +24,55 @@
 
     <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
         android:id="@+id/swipeableContainer"
-        android:paddingLeft="16dp"
-        android:paddingRight="16dp"
+        android:paddingTop="10dp"
+        android:paddingBottom="10dp"
+        android:paddingLeft="20dp"
+        android:paddingRight="20dp"
         android:layout_width="match_parent"
         android:clickable="true"
         android:background="@android:color/white"
         android:layout_height="wrap_content">
 
         <TextView
-            android:id="@+id/tvPollOptionListDayOfWeek"
-            android:textAppearance="?android:attr/textAppearanceLarge"
-            android:textColor="@android:color/darker_gray"
-            android:textAlignment="center"
-            android:gravity="center"
+            android:id="@+id/tvPollOptionListMonth"
             android:layout_alignParentTop="true"
             android:layout_alignParentLeft="true"
+            android:textAppearance="@style/AppTheme.Widget.TextView.Bold.Medium"
+            android:textColor="@android:color/black"
+            android:gravity="center"
+            android:textAlignment="center"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" />
 
         <TextView
             android:id="@+id/tvPollOptionListDate"
-            android:textAppearance="@style/AppTheme.Widget.TextView.Bold.ExtraLarge"
-            android:textColor="@android:color/darker_gray"
+            android:textColor="@android:color/black"
+            android:textAppearance="@style/AppTheme.Widget.TextView.Bold.Medium"
             android:gravity="center"
             android:textAlignment="center"
-            android:layout_below="@+id/tvPollOptionListDayOfWeek"
+            android:layout_below="@+id/tvPollOptionListMonth"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" />
 
         <TextView
-            android:id="@+id/tvPollOptionListMonth"
-            android:textAppearance="?android:attr/textAppearanceLarge"
+            android:id="@+id/tvPollOptionListDayOfWeek"
+            android:textAppearance="?android:attr/textAppearanceSmall"
             android:textColor="@android:color/darker_gray"
-            android:gravity="center"
-            android:textAlignment="center"
             android:layout_below="@+id/tvPollOptionListDate"
+            android:textAlignment="center"
+            android:gravity="center"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" />
 
+
         <RelativeLayout
             android:layout_toRightOf="@+id/tvPollOptionListDate"
-            android:layout_alignBaseline="@+id/tvPollOptionListDate"
+            android:layout_alignBaseline="@+id/tvPollOptionListMonth"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content">
             <TextView
                 android:id="@+id/tvPollOptionListName"
-                android:textAppearance="?android:attr/textAppearanceLarge"
+                android:textAppearance="?android:attr/textAppearanceMedium"
                 android:layout_marginLeft="@dimen/activity_horizontal_margin"
                 android:layout_marginRight="@dimen/activity_horizontal_margin"
                 android:ellipsize="end"
@@ -76,7 +81,7 @@
 
             <TextView
                 android:id="@+id/tvPollOptionVoteCount"
-                android:textAppearance="?android:attr/textAppearanceMedium"
+                android:textAppearance="?android:attr/textAppearanceSmall"
                 android:layout_below="@+id/tvPollOptionListName"
                 android:layout_marginLeft="@dimen/activity_horizontal_margin"
                 android:layout_marginRight="@dimen/activity_horizontal_margin"
@@ -90,9 +95,10 @@
             android:layout_alignParentRight="true"
             android:layout_centerVertical="true"
             android:layout_marginRight="@dimen/activity_horizontal_margin"
+            app:color_checked="#00B300"
             android:visibility="gone"
-            android:layout_width="40dp"
-            android:layout_height="40dp" />
+            android:layout_width="30dp"
+            android:layout_height="30dp" />
 
     </RelativeLayout>
 
