fixed create/edit poll toolbar

--- a/app/src/main/res/layout/activity_poll_form.xml
+++ b/app/src/main/res/layout/activity_poll_form.xml
@@ -11,14 +11,8 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-        <android.support.v7.widget.Toolbar
-            android:id="@+id/toolbar"
-            android:layout_width="match_parent"
-            android:layout_height="?attr/actionBarSize"
-            android:background="?attr/colorPrimary" />
-
         <RelativeLayout
-            android:layout_below="@+id/toolbar"
+            android:layout_alignParentTop="true"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="@drawable/background_gradient"
@@ -106,5 +100,26 @@
     </RelativeLayout>
 
     <include layout="@layout/view_progress_indicator" />
+
+
+    <android.support.design.widget.AppBarLayout
+        android:layout_alignParentTop="true"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:elevation="0dp"
+        android:background="@android:color/transparent">
+
+        <android.support.v7.widget.Toolbar
+            android:id="@+id/toolbar"
+            android:background="@android:color/transparent"
+            android:layout_width="match_parent"
+            android:layout_height="?attr/actionBarSize"
+            app:theme="@style/ToolbarColoredBackArrow"
+            app:navigationIcon="?attr/homeAsUpIndicator"
+            android:tint="@android:color/white"
+            app:popupTheme="@style/AppTheme.PopupOverlay"/>
+
+    </android.support.design.widget.AppBarLayout>
+
 
 </android.support.design.widget.CoordinatorLayout>
