--- a/app/src/main/res/layout/item_poll.xml
+++ b/app/src/main/res/layout/item_poll.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout android:layout_height="75dp"
+<FrameLayout android:layout_height="@dimen/poll_option_list_item_height"
     android:layout_width="match_parent"
     xmlns:android="http://schemas.android.com/apk/res/android">
 
@@ -8,7 +8,7 @@
     android:layout_width="0dp"
     android:layout_height="match_parent"
     android:layout_gravity="right"
-    android:background="#33f"
+    android:background="@color/edit_blue"
     android:clickable="true"
     android:foreground="?attr/selectableItemBackground">
         <ImageView
@@ -25,7 +25,7 @@
     android:layout_width="0dp"
     android:layout_height="match_parent"
     android:layout_gravity="right"
-    android:background="#f66"
+    android:background="@color/delete_red"
     android:clickable="true"
     android:foreground="?attr/selectableItemBackground">
         <ImageView
