--- a/app/src/main/res/layout/activity_poll_form.xml
+++ b/app/src/main/res/layout/activity_poll_form.xml
@@ -31,8 +31,32 @@
 
             <TextView
                 android:textAppearance="@style/AppTheme.Widget.TextView.Bold"
-                android:text="All Members Voted"
+                android:text="@string/all_members_voted"
                 android:id="@+id/tvAllMembersVoted"
+                android:textColor="@android:color/white"
+                android:layout_alignParentTop="true"
+                android:layout_alignParentRight="true"
+                android:layout_marginTop="@dimen/activity_vertical_margin"
+                android:layout_marginRight="@dimen/activity_horizontal_margin"
+                android:visibility="gone"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
+
+            <ImageView
+                android:id="@+id/ivEventScheduled"
+                android:background="@android:color/transparent"
+                android:tint="@android:color/white"
+                android:layout_toLeftOf="@+id/tvEventScheduled"
+                android:layout_alignTop="@+id/tvEventScheduled"
+                android:src="@drawable/ic_alarm_scheduled"
+                android:visibility="gone"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
+
+            <TextView
+                android:textAppearance="@style/AppTheme.Widget.TextView.Bold"
+                android:text="@string/event_scheduled"
+                android:id="@+id/tvEventScheduled"
                 android:textColor="@android:color/white"
                 android:layout_alignParentTop="true"
                 android:layout_alignParentRight="true"
