--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -11,5 +11,5 @@
     <color name="color_transparent">#00000000</color>
     <color name="delete_red">#F33</color>
     <color name="edit_blue">#33F</color>
-    <color name="checked_green">#00B300</color>
+    <color name="success_green">#00B300</color>
 </resources>
