--- a/app/src/main/res/layout/item_poll_option.xml
+++ b/app/src/main/res/layout/item_poll_option.xml
@@ -22,6 +22,23 @@
             android:layout_height="wrap_content" />
     </FrameLayout>
 
+    <FrameLayout
+        android:id="@+id/option_view_2"
+        android:layout_width="0dp"
+        android:layout_height="match_parent"
+        android:layout_gravity="left"
+        android:background="@color/success_green"
+        android:clickable="true"
+        android:foreground="?attr/selectableItemBackground">
+        <ImageView
+            android:src="@drawable/ic_done"
+            android:background="@android:color/transparent"
+            android:tint="@android:color/white"
+            android:layout_gravity="center"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
+    </FrameLayout>
+
     <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
         android:id="@+id/swipeableContainer"
         android:paddingTop="@dimen/poll_options_date_vertical_margin"
@@ -67,7 +84,9 @@
 
         <RelativeLayout
             android:layout_toRightOf="@+id/tvPollOptionListDate"
-            android:layout_alignBaseline="@+id/tvPollOptionListMonth"
+            android:layout_marginLeft="@dimen/activity_horizontal_margin"
+            android:layout_marginRight="@dimen/activity_horizontal_margin"
+            android:layout_centerVertical="true"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content">
             <TextView
@@ -95,7 +114,7 @@
             android:layout_alignParentRight="true"
             android:layout_centerVertical="true"
             android:layout_marginRight="@dimen/activity_horizontal_margin"
-            app:color_checked="@color/checked_green"
+            app:color_checked="@color/success_green"
             android:visibility="gone"
             android:layout_width="@dimen/checkbox_width_height"
             android:layout_height="@dimen/checkbox_width_height" />
